assets/css/certs.css
.certslist li
{
	background-size: 64px;
	background-position: 0px 0px;
	background-repeat: no-repeat;
	list-style: none;
	display: block;
}

.certslist li.gpg
{
	background-image: url(/assets/img/asc_key.png);
}

.certslist li.smime
{
	background-image: url(/assets/img/smime_key.png);
}

.certslist li dd
{
	float: left;
	clear: both;
	margin-left: 74px;
	width: 90px;
	text-align: left;
	font-size: 12px;
}

.certslist li dt
{
	float: left;
	text-align: left;
	font-size: 12px;
}

a.keydownload
{
	background-size: 12px;
	background-position: 60px;
	background-image: url(/assets/img/download_cert.png);
	background-repeat: no-repeat;

	display: inline-block;
	color: #fff;
	text-decoration: underline;
	padding-right: 20px;
}

a.keydownload:hover
{
	color: #428bca;
	background-image: url(/assets/img/download_cert_hover.png);
}

@media 
(-webkit-min-device-pixel-ratio: 2), 
(min-resolution: 192dpi)
{ 
	.certslist li.gpg
	{
		background-image: url(/assets/img/asc_key@2x.png);
	}

	.certslist li.smime
	{
		background-image: url(/assets/img/smime_key@2x.png);
	}

	a.keydownload
	{
		background-image: url(/assets/img/download_cert@2x.png);
	}

	a.keydownload:hover
	{
		background-image: url(/assets/img/download_cert_hover@2x.png);
	}
}

